
version 2.0-alpha XX-Jul-2011
. [NEW] Added support for OpenGL ES 2.0. OpenGL ES 1.1 is no longer supported
. [NEW] AtlasNode: added init method
. [NEW] ccGLState: added helper functions that keeps the GL state in order to prevent setters/getters
. [NEW] CProgressTimer: 
            - Convenience class constructor now passes in CCSprite (this gives developers easier access to timer with CCSpriteFrames, CCSprites, etc)
            - Reduced the progress timer types to just radial and bar - added in reverse, midpoint, barChangeRate to be have more flexible options to modify the progress.
			- Supports Tint + Color
. [NEW] Director: Removed Fast, FastThreaded and NSTimer director. The only one available is DisplayLink.
. [NEW] Director: Orientations are no longer supported. Only Portrait mode is supported. Use a ViewController to rotate the EAGL view.
. [NEW] Macros: ccgl* replaced with ccGL*
. [NEW] Math: Using kazmath for matrix and projection operations, and matrix GL stack
. [NEW] Math: Using NEON Matrix Multiplication from Oolong project
. [NEW] Templates: Removed Xcode3 templates. Updated Xcode4 templates.
. [NEW] Tests: FontTest uses  "bundle" fonts instead of FontLabel
. [NEW] Tests: All tests use RootViewController
. [NEW] Tests: Removed HelloWorld* tests
. [NEW] Texture: Uses NPOT textures (gles20 already supports them)
. [NEW] Tiled: cc_vertexz property is no longer supported. Will raise exception if found.
. [NEW] Types: ccColor*B replaced with ccColor*UB
. [FIX] All: Removed deprecated methods and classes that were scheduled for removal post 1.0
. [FIX] CCProgressTimer: reverse renamed to reverseDirection in order to prevent possible collision with action#reverse
. [FIX] TextureCache: Uses "self" instead of "CCTextureCache" in shared instance
. [FIX] Xcode: cocosLive: Removed. Use OpenFeint or GameCenter instead
. [FIX] Xcode: FontLabel: Removed since in iOS 4 you can load custom TTF